assets/style.css
/* Resets & General Styling */
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  text-align: center;
}

body {
  background-color: #121212;
}

a,
.nav-link {
  text-decoration: none;
}

ul {
  list-style: none;
}

/* Font Style, Weight, Size, and Colors */
#logo {
  font-family: 'Major Mono Display', monospace;
  color: white;
  font-size: 1.1rem;
  display: inline;
}

p,
li {
  font-family: 'PT Sans Narrow', sans-serif;
  font-weight: 400;
  color: white;
}

.services-btn {
  font-family: 'PT Sans Narrow', sans-serif;
  font-weight: 700;
  background-color: #ffd54f;
  color: black;
  border-color: #ffd54f;
}

#btn-position {
  position: relative;
  top: 75%;
}

.section-title {
  font-family: 'PT Sans Narrow', sans-serif;
  color: #ffd54f;
  font-size: 2rem;
  margin: 1em 0;
}

small {
  font-family: 'PT Sans', sans-serif;
  color: #c8a415;
  font-size: 0.9rem;
}

.alt-small {
  font-family: 'PT Sans', sans-serif;
  color: #c8a415;
  font-weight: 700;
  font-size: 0.03rem;
}

.alt-small-bold {
  font-family: 'PT Sans', sans-serif;
  color: #ffd54f;
  font-weight: 700;
}

.single-alt-small {
  font-size: 1rem;
  color: #ffd54f;
  font-family: 'PT Sans', sans-serif;
}

.single-alt {
  font-size: 1.1rem;
  color: white;
  font-family: 'PT Sans', sans-serif;
}

.alt-title {
  font-family: 'PT Sans', sans-serif;
  color: #ffd54f;
  font-size: 1.8rem;
}

.focus-text {
  color: #ffd54f;
}

h3,
footer {
  font-family: 'PT Sans', sans-serif;
}

h3 {
  font-style: italic;
  color: #ffff81;
}

footer p,
footer li,
footer a {
  font-weight: 700;
  color: #c8a415;
}

footer p {
  font-size: 0.9rem;
}

@media screen and (min-width: 350px) {
  #logo {
    font-size: 1.4rem;
  }
}

@media screen and (min-width: 750px) {
  #logo {
    font-size: 1.7rem;
  }
}

@media screen and (min-width: 1000px) {
  .alt-title {
    font-size: 1.5rem;
  }

  .alt-title {
    font-size: 2rem;
  }

  .alt-small,
  .single-alt-small {
    font-size: 1.1rem;
    padding-bottom: 0.4em;
  }

  #package-options,
  #single-options {
    font-size: 1.06rem;
  }
}

/* Line Spacing  */
p,
.process-description li,
.service-card li {
  line-height: 1.75em;
}

/* Main is only in the default layout - this holds the rest of the sections */
main {
  width: 100%;
  margin: auto;
}

/* Opacity Containers */
.nav-flex-container {
  background-color: rgba(255, 255, 255, 0.12);
  width: 100%;
  padding: 1.3em;
  border-bottom: 1px solid #e0e0e0;
}

.surface-container {
  background-color: rgba(255, 255, 255, 0.05);
  border: 1px solid #c8a415;
}

.footer-container {
  background-color: rgba(255, 255, 255, 0.12);
  width: 100%;
  border-top: 1px solid #e0e0e0;
  padding: 1.5em;
}

.services-btn,
.service-details-btn {
  background-color: #ffd54f;
  color: black;
  border-color: #ffd54f;
}

/* Navigation */
.nav-flex-container {
  display: flex;
  justify-content: space-around;
  align-items: center;
}

.nav-links-desktop {
  display: none;
}

.logo-svg {
  display: inline;
  margin-right: 0.6em;
}

/* Mobile Menu */
.nav-links {
  position: absolute;
  top: 4.6em;
  height: 6vh;
  width: 100%;
  background-color: #ffd54f;
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;
  align-items: center;
  align-content: center;
}

.nav-links li {
  font-size: 1rem;
}

.nav-links li a {
  color: black;
  font-weight: 700;
}

@media screen and (min-width: 1000px) {
  .nav-links {
    display: none;
  }

  .nav-links-desktop {
    display: flex;
  }

  .nav-links-desktop li {
    font-size: 1.3rem;
    margin-right: 3em;
  }

  .nav-links-desktop li a {
    color: white;
    background-color: none;
  }

  .nav-link {
    border-bottom: 1px solid #ffd54f;
  }
}

/* Main Content Sections */
#welcome {
  margin-bottom: 6em;
}

.img-container {
  top: 3.8em;
  height: 90vh;
  background-image: url('../assets/images/front-audi.jpg');
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  position: relative;
}

.logo-badge {
  display: none;
}

@media screen and (min-width: 1000px) {
  .img-container {
    top: auto;
  }

  .splash-btn {
    display: none;
  }
}

#process {
  width: 95%;
  margin: 2em auto;
}

.process-container {
  font-size: 1.1rem;
  padding: 1.3em;
  margin-bottom: 1.5em;
}

@media screen and (min-width: 1000px) {
  .process-container {
    align-items: center;
    justify-content: center;
  }

  .process-container p {
    font-size: 1.4rem;
    padding: 1em;
  }
}

#package-options {
  width: 95%;
  margin: 4.5em auto;
}

.package-options-overview {
  padding: 1em;
  margin-bottom: 3em;
}

.package-options-parent {
  display: flex;
  flex-direction: column;
}

.package-options-child {
  width: 100%;
  margin-bottom: 3em;
  padding-top: 2em;
}

.services-btn {
  width: 50%;
  margin: 2em auto 3.5em auto;
  padding: 1em 2em;
}

@media screen and (min-width: 1000px) {
  .package-options-parent {
    display: flex;
    flex-direction: row;
  }

  .package-options-child {
    width: 50%;
    padding-top: 2em;
    border: solid 2px #ffd54f;
    margin: 1.5em;
  }

  .package-options-overview {
    font-size: 1.4rem;
  }

  .services-btn {
    font-size: 1.2rem;
    padding: 0.5em 3em;
  }
}

#single-options {
  width: 95%;
  margin: 2em auto;
}

.single-options-overview {
  padding: 1em;
  margin-bottom: 3em;
}

.single-options-child {
  width: 100%;
  margin-left: auto;
  margin-right: auto;
  margin-bottom: 1em;
  padding-top: 1.5em;
}

@media screen and (min-width: 1000px) {
  .single-options-parent {
    display: flex;
    border: solid 2px #ffd54f;
  }

  .single-options-child {
    width: 90%;
    margin: 1em auto;
    flex-direction: row;
  }

  .single-options-overview {
    font-size: 1.4rem;
  }

  #btn-blk {
    width: 100%;
    margin: auto;
  }
}

/* Footer */
.footer-container {
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;
}

.footer-copy a {
  text-decoration: underline;
}

.footer-icons {
  align-self: center;
}

.footer-icons a {
  padding-left: 1.5em;
}

@media screen and (min-width: 1000px) {
  .footer-container * {
    font-size: 0.9rem;
  }

  .footer-icons a {
    margin-right: 1.5em;
    margin-left: 1.5em;
  }
}

/* Blog Posts Page */

#blog-page-heading {
  font-family: 'PT Sans Narrow', sans-serif;
  font-weight: 700;
  margin-bottom: 1.2em;
  margin-top: 3em;
  color: white;
}

#blog-page-heading-ul li {
  padding-bottom: 2em;
}

#blog-page-heading-ul a {
  color: #c8a415;
}

/* Blog Posts */

.post-main-container * {
  text-align: left;
}

.post-main-container {
  margin: 3em auto;
}

.post-title,
.post-subheading,
.post-main-container ol li {
  font-family: 'PT Sans Narrow', sans-serif;
}

.post-title,
.post-subheading {
  font-weight: 400;
}

.post-main-container ol li {
  font-weight: 700;
  font-size: 1.1rem;
  padding-bottom: 0.3em;
  padding-left: 0.5em;
}

.post-title {
  margin-top: 2em;
  margin-bottom: 1em;
  font-size: 3rem;
  border-bottom: 1px solid #ffd54f;
  color: white;
}

.post-subheading {
  padding-bottom: 0.5em;
  font-weight: 700;
  color: #ffd54f;
}

.post-main-container p {
  font-family: 'PT Sans Narrow', sans-serif;
  font-weight: 400;
  font-size: 1.2rem;
  line-height: 2.3125em;
}

.post-main-container ol {
  font-family: 'PT Sans Narrow', sans-serif;
  font-weight: 700;
}

.post-main-container p,
ol {
  margin-bottom: 1.5em;
}

.post-main-container small {
  color: #ffd54f;
}

/* About Page */

.about-text {
  padding: 2em;
  font-size: 1.3rem;
  margin: 4em auto;
}

.about-container {
  width: 90%;
}

/* Detailed Services Page */

#no-border {
  border: none;
}

#side-gap {
  margin-left: 1.5em;
  margin-right: 1.5em;
}

.divider {
  width: 50%;
  color: white;
  margin: 1.3em auto;
}

